# pogodyna

./: .cz.toml  .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: mdbook.yml  test.yml
architecture/: index.html
base-station/: Cargo.toml  rustfmt.toml  sensor-readings.db  sensor_readings.db
base-station/.sqlx/: query-22b41cca1136c518a8a3da38c149f7ab444ebc5b50f3236bde13f3c26066a999.json  query-e4ebbeaa9eec0a16c5c91959ac6b4fa4341d2a974251dac08e1dbfa0b7541ee0.json  query-edec437497ed6bb11795c7d9d3dd16e19b3a9491d6a71e4bbad0113c91f0ebb5.json
base-station/migrations/: 20250504161624_sensor_readings.up.sql
base-station/src/: error.rs  lib.rs
base-station/src/api/: env_api_response.rs  mod.rs
base-station/src/db/: mod.rs  pagination.rs
base-station/src/mqtt/: mod.rs  packets.rs  read_loop.rs
bmp-sensor/: .env  Cargo.toml  build.rs
bmp-sensor/.cargo/: config.toml
bmp-sensor/src/: error.rs  lcd.rs  lib.rs  wifi.rs
bmp-sensor/src/mqtt/: mod.rs  mqtt_client.rs
common/: Cargo.toml
installation/: index.html
spec/docs/: book.toml
spec/docs/src/: README.md  SUMMARY.md
spec/docs/src/architecture/: README.md
spec/docs/src/installation/: README.md
spec/migrations/: 20250504161624_sensor_readings.up.sql
