[package]
name = "base-station"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "base-station"
path = "./src/bin/main.rs"

[dependencies]
dotenvy = {version = "0.15"}
poem = {version = "3.1"}
poem-openapi = {version = "5.1"}
tokio = {version = "1.42", features = ["net", "rt-multi-thread", "macros"]}
thiserror = {version = "2.0"}
tracing = {version = "0.1"}

mqttrs = { path = "../../mqttrs/" }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite"]}

