[package]
name = "base-station"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "base-station"
path = "./src/bin/main.rs"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
dotenvy = {version = "0.15"}
poem = {version = "3.1"}
poem-openapi = { version = "5.1", features = ["swagger-ui", "chrono"] }
serde = { version = "1.0" }
serde_json = {version = "1.0"}
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "chrono", "migrate"]}
tokio = {version = "1.42", features = ["net", "rt-multi-thread", "macros"]}
thiserror = {version = "2.0"}
tracing = {version = "0.1"}
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

mqttrs = { git = "https://github.com/VersBinarii/mqttrs.git" }

