[package]
edition = "2021"
name    = "bmp-sensor"
version = "0.2.0"

[[bin]]
name = "bmp-sensor"
path = "./src/bin/main.rs"
harness = false

[dependencies]
defmt = "1.0.1"
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
] }
embassy-time = { version = "0.5.0" }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embassy-futures = { version = "0.1" }
esp-alloc = { version= "0.8.0", features = [] }
esp-hal = { version = "1.0.0-rc.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
esp-wifi = {version = "0.15.0", features = ["builtin-scheduler", "esp32c3", "wifi", "esp-alloc", "defmt"]}
rtt-target = { version = "0.6.1", features = ["defmt"] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-20480",
  "defmt",
] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }
heapless = { version = "0.9.1", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
# bme280 = { git = "https://github.com/VersBinarii/bme280-rs.git", features = ["async", "defmt"]}
bme280 = { path = "../../bme280/", features = ["async", "defmt"]}
mqttrs = { path = "../../mqttrs/", default-features = false}
embedded-hal-bus = { version="0.3.0", features = ["alloc", "defmt-03", "async"]}

[build-dependencies]
dotenvy = "0.15"

[patch.crates-io]
# embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
# embassy-time-queue-utils = {git = "https://github.com/embassy-rs/embassy.git", branch = "main"}
# esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main"}
# esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main"}
# esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main"}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
